FKDK-810 Bottom page Temaer lige nu section on mobile fix

--- a/public_html/profiles/os2sub/themes/custom/site_alternative/src/scss/custom/entities/view/_os2web-kulturnaut-tema-list.scss
+++ b/public_html/profiles/os2sub/themes/custom/site_alternative/src/scss/custom/entities/view/_os2web-kulturnaut-tema-list.scss
@@ -20,16 +20,16 @@
     top: 0%;
     left: 0%;
     border-radius: 50% 50%;
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
     background-color: rgba($color-img-effect-1, 0.50);
     opacity: 50%;
     margin-left: 15px;
 
   }
   & .img-circle{
-    width: 60px;
-    height: 60px;
+    width: 50px;
+    height: 50px;
   }
 }
 .view-os2web-kulturnaut-tema-list {
@@ -86,6 +86,17 @@
 // Tablet - and up
 @include media-breakpoint-up(sm) {
 
+    .views-field.views-field-field-os2web-kult-tema-image .field-content{
+    & .img-effect {
+      width: 60px;
+      height: 60px;
+
+    }
+    & .img-circle{
+      width: 60px;
+      height: 60px;
+    }
+  }
 
 }
 
